<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/selection_onglet">

    <TextView
        style="@style/textView"
        android:id="@+id/Correction_onglet"
        android:text="@string/selecExplication"/>
    
    <View
        style="@style/view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marge"
        android:gravity="center">
        
        <Button
            style="@style/button"
            android:id="@+id/selecBtnRAZ"
            android:onClick="Reinitiliser"
            android:text="@string/selecBtnRAZ" />

        <Button
            style="@style/button"
            android:id="@+id/selecBtnValide"
            android:onClick="Valider"
            android:text="@string/selecBtnValide" />

        <Button
            style="@style/button"
            android:id="@+id/selecBtnAnnul"
            android:onClick="Annuler"
            android:text="@string/selecBtnAnnul" />
        
    </LinearLayout>

    <View
        style="@style/view" />

    <ListView
        android:choiceMode="multipleChoice"
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>




</LinearLayout>